// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox component > renders checkbox is disabled, is checked, has an error and input has an error class 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      checked=""
      class="checkbox__input error"
      data-testid="checkboxTestInputId"
      disabled=""
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component > renders checkbox is disabled, is checked, has no error 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      checked=""
      class="checkbox__input"
      data-testid="checkboxTestInputId"
      disabled=""
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component > renders checkbox is disabled, is not checked, has an error and input has an error class 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      class="checkbox__input error"
      data-testid="checkboxTestInputId"
      disabled=""
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component > renders checkbox is disabled, is not checked, has no error 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      class="checkbox__input"
      data-testid="checkboxTestInputId"
      disabled=""
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component > renders checkbox is not disabled, is checked, has an error and input has an error class 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      checked=""
      class="checkbox__input error"
      data-testid="checkboxTestInputId"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component > renders checkbox is not disabled, is checked, has no error 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      checked=""
      class="checkbox__input"
      data-testid="checkboxTestInputId"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component > renders checkbox is not disabled, is not checked, has an error and input has an error class 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      class="checkbox__input error"
      data-testid="checkboxTestInputId"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component > renders checkbox is not disabled, is not checked, has no error 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      class="checkbox__input"
      data-testid="checkboxTestInputId"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component renders checkbox is disabled, is checked, has an error and input has an error class 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      checked=""
      class="checkbox__input error"
      data-testid="checkboxTestInputId"
      disabled=""
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component renders checkbox is disabled, is checked, has no error 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      checked=""
      class="checkbox__input"
      data-testid="checkboxTestInputId"
      disabled=""
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component renders checkbox is disabled, is not checked, has an error and input has an error class 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      class="checkbox__input error"
      data-testid="checkboxTestInputId"
      disabled=""
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component renders checkbox is disabled, is not checked, has no error 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      class="checkbox__input"
      data-testid="checkboxTestInputId"
      disabled=""
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component renders checkbox is not disabled, is checked, has an error and input has an error class 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      checked=""
      class="checkbox__input error"
      data-testid="checkboxTestInputId"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component renders checkbox is not disabled, is checked, has no error 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      checked=""
      class="checkbox__input"
      data-testid="checkboxTestInputId"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component renders checkbox is not disabled, is not checked, has an error and input has an error class 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      class="checkbox__input error"
      data-testid="checkboxTestInputId"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox component renders checkbox is not disabled, is not checked, has no error 1`] = `
<div>
  <label
    class="checkbox"
    data-testid="checkboxTestId"
    for="checkbox"
  >
    <input
      class="checkbox__input"
      data-testid="checkboxTestInputId"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <span
      class="checkbox__indicator"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </span>
  </label>
</div>
`;
